[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Textures/Objects/Gear.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/Objects/Barrel (1).png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://Assets/Font/Font.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Scripts/times.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=5]
size = 116
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 200
outline_color = Color( 0.87451, 0.0823529, 0.0823529, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="Main Menu" type="Button" parent="."]
margin_left = -409.0
margin_top = 81.0
margin_right = 368.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 5 )
text = "Continue"
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -890.5
margin_top = -1574.0
margin_right = 849.5
margin_bottom = -882.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 589.0
margin_top = -1049.0
margin_right = 1089.0
margin_bottom = -849.0
rect_rotation = -0.0655451
rect_scale = Vector2( 2.24198, 3.41235 )
rect_pivot_offset = Vector2( 298.147, 128.816 )
theme = SubResource( 7 )
text = "00-00-00"
align = 1
valign = 1

[node name="Collect" type="Sprite" parent="."]
position = Vector2( -48, -740 )
rotation = -0.702577
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Medails" type="Node2D" parent="."]
position = Vector2( -420.687, -857.982 )
scale = Vector2( 3, 3 )

[node name="Bronze" type="Sprite" parent="Medails"]
modulate = Color( 0.803922, 0.498039, 0.196078, 1 )
position = Vector2( 36, 207 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Silver" type="Sprite" parent="Medails"]
modulate = Color( 0.752941, 0.752941, 0.752941, 1 )
position = Vector2( 126, 237 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Gold" type="Sprite" parent="Medails"]
modulate = Color( 1, 0.843137, 0, 1 )
position = Vector2( 219, 207 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Label3" type="Label" parent="."]
margin_left = 589.0
margin_top = -649.0
margin_right = 1089.0
margin_bottom = -449.0
rect_rotation = -0.0655451
rect_scale = Vector2( 2.24198, 3.41235 )
rect_pivot_offset = Vector2( 298.147, 128.816 )
theme = SubResource( 7 )
text = "00-00-00

"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 589.0
margin_top = -249.0
margin_right = 1089.0
margin_bottom = -49.0
rect_rotation = -0.0655451
rect_scale = Vector2( 2.24198, 3.41235 )
rect_pivot_offset = Vector2( 298.147, 128.816 )
theme = SubResource( 7 )
text = "00-00-00

"
align = 1
valign = 1

[connection signal="pressed" from="Main Menu" to="Main Menu" method="_on_next"]
